# sensor

./: CMakeLists.txt  platformio.ini  sdkconfig.heltec_wifi_lora_32_V2
components/ESP32_VL53L0X/: CMakeLists.txt
docs/: blocks.excalidraw  high_level.excalidraw
docs/schematic/: easyeda.json
src/: laser.c  laser.h  lora.c  lora.h  main.c  qmc.c  qmc.h  slp.c  slp.h
